Unified adding and removing nodes into one method Added default undo / redo actions for changing the graph topology Removed status and dirtyFlag Separator lines in panels now using svg rect instead of path Moved panel origin from the center to top-left corner to prevent jumping when resizing Sockets now have a svg group each Now using window.requestAnimationFrame instead of window.setInterval Renamed socket.circle panel.rect wire.path to node.primaryElement Fixed svg coordinate rounding Cleaned up source code in general Improved test server and html file

--- a/WiredPanels.css
+++ b/WiredPanels.css
@@ -8,14 +8,6 @@
     100% { opacity: 1; }
 }
 
-.WiredPanels .fadeIn {
-    animation: fadeIn 0.25s linear forwards;
-}
-
-.WiredPanels .fadeOut {
-    animation: fadeOut 0.25s linear forwards;
-}
-
 .WiredPanels {
     width: 100%;
     height: 100%;
@@ -30,22 +22,32 @@
     -o-user-select: none;
 }
 
-.WiredPanels * {
-    font-family: Verdana;
-    font-size: 12px;
-    font-style: normal;
-    font-variant: normal;
-    dominant-baseline: central;
-    transition: stroke-width 0.15s, stroke-opacity 0.15s;
+.WiredPanels .ignore {
+    pointer-events: none;
 }
 
-.WiredPanels .label,.noHover {
+.WiredPanels .selected {
+    filter: url(#blurFilter);
+}
+
+.WiredPanels .fadeIn {
+    animation: fadeIn 0.25s linear forwards;
+}
+
+.WiredPanels .fadeOut {
+    animation: fadeOut 0.25s linear forwards;
+}
+
+.WiredPanels .boxSelection {
+    stroke-width: 1;
+    fill-opacity: 0.4;
     pointer-events: none;
 }
 
 .WiredPanels .panel {
     stroke-width: 1;
     fill: transparent;
+    transition: stroke-width 0.25s /*, width 0.25s, height 0.25s*/;
 }
 
 .WiredPanels rect.panel.selected {
@@ -56,9 +58,19 @@
     stroke-width: 3;
 }
 
+.WiredPanels .label {
+    font-family: Verdana;
+    font-size: 12px;
+    font-style: normal;
+    font-variant: normal;
+    dominant-baseline: central;
+    pointer-events: none;
+}
+
 .WiredPanels .socket {
     stroke-width: 2;
     fill: transparent;
+    transition: stroke-width 0.25s;
 }
 
 .WiredPanels .socket.selected {
@@ -73,19 +85,10 @@
     stroke-linecap: round;
     stroke-width: 4;
     stroke-opacity: 0.6;
+    transition: stroke-opacity 0.25s;
     fill: none;
 }
 
 .WiredPanels .wire:hover {
     stroke-opacity: 1.0;
-}
-
-.WiredPanels .selected {
-    filter: url(#blurFilter);
-}
-
-.WiredPanels .boxSelection {
-    stroke-width: 1;
-    fill-opacity: 0.4;
-    pointer-events: none;
 }
